20260108 - fix df-print

--- a/missing-data.qmd
+++ b/missing-data.qmd
@@ -241,6 +241,8 @@ I have reported this bug to the package developers and they are aware of it: <ht
 In any case, the code runs fine locally.
 
 ```{r}
+#| df-print: default
+
 linearGCM_mice_pooled <- mice::pool(linearGCM_mice)
 
 linearGCM_mice_pooled
