--- a/missing-data.qmd
+++ b/missing-data.qmd
@@ -241,7 +241,7 @@ I have reported this bug to the package developers and they are aware of it: <ht
 In any case, the code runs fine locally.
 
 ```{r}
-#| df-print: tibble
+#| df-print: kable
 
 linearGCM_mice_pooled <- mice::pool(linearGCM_mice)
 
