--- a/missing-data.qmd
+++ b/missing-data.qmd
@@ -40,8 +40,18 @@ For examples using full information maximum likelihood (FIML), see examples of s
 ## Describe Missing Data
 
 ```{r}
-psych::describe(mydata_long)
+#| eval: false
 
+psych::describe(mydata_long)
+```
+
+```{r}
+#| echo: false
+
+rmarkdown::paged_table(psych::describe(mydata_long))
+```
+
+```{r}
 mice::md.pattern(mydata_long, rotate.names = TRUE)
 ```
 
@@ -239,33 +249,22 @@ linearGCM_mice <- with(
 linearGCM_mice
 ```
 
-There is currently a bug in the `mice` package that prevents the pooled results from displaying online due to an error (see below).
-I have reported this bug to the package developers and they are aware of it: <https://github.com/amices/mice/issues/733>.
-In any case, the code runs fine locally.
-
 ```{r}
 linearGCM_mice_pooled <- mice::pool(linearGCM_mice)
 
 linearGCM_mice_pooled
 ```
 
-Here is what the pooled results look like when run locally:
+```{r}
+#| eval: false
 
-```r
-Class: mipo    m = 5 
-                               term m    estimate        ubar            b          t dfcom       df        riv     lambda        fmi
-1                       (Intercept) 5 15.84046905 2.257258050 0.1089689643 2.38802081   988 548.6822 0.05792991 0.05475780 0.05818456
-2                   sexFactorfemale 5  1.80664300 4.133594471 0.2201072842 4.39772321   988 504.8443 0.06389808 0.06006034 0.06376202
-3                       ageCentered 5 -0.74534955 0.626626170 0.0491879357 0.68565169   988 337.5576 0.09419575 0.08608675 0.09145390
-4                             sleep 5 -0.94874443 0.033710626 0.0018756972 0.03596146   988 485.1321 0.06676935 0.06259024 0.06643104
-5       sexFactorfemale:ageCentered 5  2.39468731 1.120480226 0.0982780551 1.23841389   988 295.1499 0.10525279 0.09522961 0.10129884
-6                 ageCentered:sleep 5  0.01561705 0.009444875 0.0008244436 0.01043421   988 296.9159 0.10474806 0.09481624 0.10085249
-7             sexFactorfemale:sleep 5  0.06740859 0.060796135 0.0031446852 0.06456976   988 517.8592 0.06207010 0.05844256 0.06205797
-8 sexFactorfemale:ageCentered:sleep 5 -0.10936178 0.016746068 0.0013001808 0.01830629   988 341.9203 0.09316915 0.08522849 0.09053274
+summary(linearGCM_mice_pooled)
 ```
 
 ```{r}
-summary(linearGCM_mice_pooled)
+#| echo: false
+
+rmarkdown::paged_table(summary(linearGCM_mice_pooled))
 ```
 
 ### Structural Equation Models
