--- a/index.qmd
+++ b/index.qmd
@@ -8,3 +8,5 @@ Isaac Petersen is an Associate Professor in the Department of Psychological and 
 This workshop provides an applied overview of principles and methods for longitudinal data analysis, with hands-on examples in [`R`](https://cran.r-project.org).
 Topics include types of longitudinal data, data manipulation and visualization, statistical methods for longitudinal analysis (including mixed-effects models and structural equation models), longitudinal measurement invariance, handling missing data, and separating within-person and between-person effects.
 Participants are encouraged to bring a laptop with [`R`](https://cran.r-project.org) and [`RStudio`](https://posit.co/download/rstudio-desktop/) installed for interactive exercises.
+This workshop is intended for participants with experience using [`R`](https://cran.r-project.org) and [`RStudio`](https://posit.co/download/rstudio-desktop/).
+Prior experience with longitudinal data analysis, though helpful, is not required.
