--- a/mixed-effects-models.qmd
+++ b/mixed-effects-models.qmd
@@ -34,6 +34,7 @@ mydata_long <- read.csv("./data/mydata_long.csv")
 1. Do the trajectories differ between boys and girls?
 1. Does how much sleep the adolescent receives predict their depressive symptoms over time?
 1. Does the association between sleep and depressive symptoms differ between boys and girls?
+1. What is the association between sleep and depressive symptoms at the within-individual level versus between-individual level?
 
 # Pre-Model Computation
 
@@ -52,7 +53,11 @@ mydata_long$ageCenteredSquared <- mydata_long$ageCentered ^ 2
 
 ## Fit the Model
 
-In estimating linear growth curves of depression symptoms, this model fits random intercepts and slopes for subjects, `sex` as a time-invariant fixed-effect predictor of the intercepts and slopes, and `sleep` as a time-varying fixed-effect predictor of depression, with effects allowed to vary over age and by sex, including two‐ and three‐way interactions with age and sex.
+In estimating linear growth curves of depression symptoms, this model fits:
+
+1. random intercepts and slopes for subjects,
+1. `sex` as a time-invariant fixed-effect predictor of the intercepts and slopes, and
+1. `sleep` as a time-varying fixed-effect predictor of depression, with effects allowed to vary over age and by sex, including two‐ and three‐way interactions with age and sex.
 
 ```{r}
 linearGCM <- lmerTest::lmer(
@@ -188,7 +193,11 @@ ggplot(
 
 ## Fit the Model
 
-In estimating polynomial (in this case, quadratic) growth curves of depression symptoms, this model fits random intercepts and random linear and quadratic slopes for subjects, `sex` as a time-invariant fixed-effect predictor of the intercepts and slopes, and `sleep` as a time-varying fixed-effect predictor of depression, with effects allowed to vary over age and by sex, including two‐ and three‐way interactions with age and sex.
+In estimating polynomial (in this case, quadratic) growth curves of depression symptoms, this model fits:
+
+1. random intercepts and random linear and quadratic slopes for subjects,
+1. `sex` as a time-invariant fixed-effect predictor of the intercepts and slopes, and
+1. `sleep` as a time-varying fixed-effect predictor of depression, with effects allowed to vary over age and by sex, including two‐ and three‐way interactions with age and sex.
 
 ```{r}
 quadraticGCM <- lmerTest::lmer(
@@ -340,7 +349,10 @@ num_cores <- parallelly::availableCores() - 1
 num_true_cores <- parallelly::availableCores(logical = FALSE) - 1
 ```
 
-In estimating generalized additive growth models of depression symptoms, this model includes sex‐specific smooth functions of age, `sex` and `sleep` as fixed effects with their interaction, and sex‐specific smooth interactions between age and sleep, along with subject‐specific smooth deviations over age.
+In estimating generalized additive growth models of depression symptoms, this model includes:
+
+1. sex‐specific smooth functions of age, `sex` and `sleep` as fixed effects with their interaction, and
+1. sex‐specific smooth interactions between age and sleep, along with subject‐specific smooth deviations over age.
 
 ```{r}
 gamGCM <- mgcv::gam(
@@ -527,7 +539,13 @@ mydata_long <- mydata_long |>
 
 ## Fit the Model
 
-In disaggregating within- and between-person effects, this model fits random intercepts and random linear and quadratic slopes for subjects, `sex` and `sleep_personMean` as time-invariant fixed-effect predictors of the intercepts and slopes, and `sleep_personMeanCentered` as a time-varying fixed-effect predictor of depression, with effects allowed to vary over age and by sex, including two‐ and three‐way interactions with age and sex.
+In disaggregating within- and between-person effects, this model fits:
+
+1. random intercepts and random linear and quadratic slopes for subjects,
+1. `sex` and `sleep_personMean` as time-invariant fixed-effect predictors of the intercepts and slopes, and
+1. `sleep_personMeanCentered` as a time-varying fixed-effect predictor of depression, with effects allowed to vary over age and by sex, including two‐ and three‐way interactions with age and sex.
+
+The `*` symbol (unlike the `:` symbol) estimates all lower-order main effects and interactions, to simplify the syntax.
 
 ```{r}
 withinBetweenPersonSleepModel <- lmerTest::lmer(
