--- a/structural-equation-models.qmd
+++ b/structural-equation-models.qmd
@@ -35,6 +35,16 @@ longitudinalMI3 <- read.csv("./data/Bliese-Ployhart-2002-indicators-3.csv")
 longitudinalMI4 <- read.csv("./data/Bliese-Ployhart-2002-indicators-4.csv")
 ```
 
+# Research Questions
+
+1. What is the form of adolescents' depressive symptom trajectories across ages 14 to 17?
+1. Do the trajectories differ between boys and girls?
+1. Does how much sleep the adolescent receives predict their depressive symptoms over time?
+1. Does the association between sleep and depressive symptoms differ between boys and girls?
+1. What is the association between sleep and depressive symptoms at the within-individual level versus between-individual level?
+1. Does within-person change in anxiety predict within-person change in depression (and vice versa).
+1. Do our measures show measurement invariance across time?
+
 # Pre-Model Computation
 
 ```{r}
@@ -43,6 +53,7 @@ mydata_long$sexFactor <- factor(mydata_long$sex)
 mydata_long <- mydata_long |>
   group_by(ID) |>
   mutate(
+    # Compute person mean and mean-centered variables
     ses_personMean = mean(ses, na.rm = TRUE),
     ses_personMeanCentered = ses - ses_personMean,
     sleep_personMean = mean(sleep, na.rm = TRUE),
@@ -51,6 +62,13 @@ mydata_long <- mydata_long |>
     depression_personMeanCentered = depression - depression_personMean,
     anxiety_personMean = mean(anxiety, na.rm = TRUE),
     anxiety_personMeanCentered = anxiety - anxiety_personMean,
+    # Compute interaction terms
+    sexEffectCodeXses = sexEffectCode * ses,
+    sexEffectCodeXsleep = sexEffectCode * sleep,
+    sexEffectCodeXdepression = sexEffectCode * depression,
+    sexEffectCodeXanxiety = sexEffectCode * anxiety,
+    sexEffectCodeXsleep_personMean = sexEffectCode * sleep_personMean,
+    sexEffectCodeXsleep_personMeanCentered = sexEffectCode * sleep_personMeanCentered
   ) |>
   ungroup()
 
@@ -58,8 +76,18 @@ mydata_wide <- mydata_long |>
   select(-age) |>
   tidyr::pivot_wider(
     names_from  = timepoint,
-    values_from = c(ses, ses_personMeanCentered, sleep, sleep_personMeanCentered, depression, depression_personMeanCentered, anxiety, anxiety_personMeanCentered)
+    values_from = c(
+      ses, ses_personMeanCentered, sleep, sleep_personMeanCentered, depression,
+      depression_personMeanCentered, anxiety, anxiety_personMeanCentered, 
+      sexEffectCodeXses, sexEffectCodeXsleep, sexEffectCodeXdepression, sexEffectCodeXanxiety,
+      sexEffectCodeXsleep_personMeanCentered)
   )
+```
+
+Variable names for the data in wide form:
+
+```{r}
+names(mydata_wide)
 ```
 
 # Latent Growth Curve Model
@@ -68,7 +96,11 @@ mydata_wide <- mydata_long |>
 
 ### Model Syntax
 
-In estimating linear latent growth curves of depression symptoms, this model specifies latent intercept and slope factors, `sex` as a time-invariant predictor of the latent intercept and slope, and `sleep` as a time-varying covariate predicting depression symptoms at each wave.
+In estimating linear latent growth curves of depression symptoms, this model specifies:
+
+1. latent intercept and slope factors
+1. the person's sex (`sexEffectCode`) and the person's average sleep (`sleep_personMean`; and their interaction; `sexEffectCodeXsleep_personMean`) as time-invariant predictors of the latent intercept and slope, and
+1. a person's deviations from their average sleep (`sleep_personMeanCentered`; and in interaction with sex; `sexEffectCodeXsleep_personMeanCentered`) as time-varying covariates predicting concurrent depression symptoms at each wave.
 
 ```{r}
 linearGCM_syntax <- '
@@ -77,20 +109,20 @@ linearGCM_syntax <- '
   slope =~ 0*depression_1 + 1*depression_2 + 2*depression_3 + 3*depression_4
 
   # Regression paths
-  intercept ~ sexMale
-  slope ~ sexMale
+  intercept ~ sexEffectCode + sleep_personMean + sexEffectCodeXsleep_personMean
+  slope ~ sexEffectCode + sleep_personMean + sexEffectCodeXsleep_personMean
   
   # Time-varying covariates
-  depression_1 ~ sleep_1
-  depression_2 ~ sleep_2
-  depression_3 ~ sleep_3
-  depression_4 ~ sleep_4
+  depression_1 ~ sleep_personMeanCentered_1 + sexEffectCodeXsleep_personMeanCentered_1
+  depression_2 ~ sleep_personMeanCentered_2 + sexEffectCodeXsleep_personMeanCentered_2
+  depression_3 ~ sleep_personMeanCentered_3 + sexEffectCodeXsleep_personMeanCentered_3
+  depression_4 ~ sleep_personMeanCentered_4 + sexEffectCodeXsleep_personMeanCentered_4
   
   # Constrain observed intercepts to zero
-  depression_1 ~ 0
-  depression_2 ~ 0
-  depression_3 ~ 0
-  depression_4 ~ 0
+  depression_1 ~ 0*1
+  depression_2 ~ 0*1
+  depression_3 ~ 0*1
+  depression_4 ~ 0*1
   
   # Estimate mean of intercept and slope
   intercept ~ 1
@@ -100,14 +132,18 @@ linearGCM_syntax <- '
 
 ### Fit Model
 
+Specifying `fixed.x = FALSE` would estimate (i.e., would not consider as fixed) means, variances, and covariances of the observed variables.
+Doing so would allow missing information in the predictors to be included as part of full information maximum likelihood (FIML).
+However, this gets challenging to use when including both person mean and person-mean-centered variables (due to linear dependencies).
+Thus, many of these examples do not specify `fixed.x = FALSE`.
+
 ```{r}
 linearGCM_fit <- lavaan::sem(
   linearGCM_syntax,
   data = mydata_wide,
   missing = "ML", # FIML
   estimator = "MLR", # Huber-White robust standard errors (for heteroscedasticity and nonnormally distributed residuals)
-  meanstructure = TRUE, # estimate means/intercepts
-  fixed.x = FALSE)  # estimate (i.e., do not consider as fixed) means/variances/covariances of observed variables; allows missing information to be included as part of FIML
+  meanstructure = TRUE) # estimate means/intercepts
 ```
 
 ### Model Summary
@@ -142,6 +178,8 @@ lavaanPlot::lavaanPlot(
   stand = TRUE)
 ```
 
+To create an interactive path diagram, you can use the following syntax:
+
 ```{r}
 #| eval: false
 
@@ -152,7 +190,11 @@ lavaangui::plot_lavaan(linearGCM_fit)
 
 ### Model Syntax
 
-In estimating quadratic latent growth curves of depression symptoms, this model specifies latent intercept and latent linear and quadratic slope factors, `sex` as a time-invariant predictor of the latent intercept and slope, and `sleep` as a time-varying covariate predicting depression symptoms at each wave.
+In estimating quadratic latent growth curves of depression symptoms, this model specifies:
+
+1. latent intercept and latent linear and quadratic slope factors
+1. the person's sex (`sexEffectCode`) and the person's average sleep (`sleep_personMean`; and their interaction; `sexEffectCodeXsleep_personMean`) as time-invariant predictors of the latent intercept and slope, and
+1. a person's deviations from their average sleep (`sleep_personMeanCentered`; and in interaction with sex; `sexEffectCodeXsleep_personMeanCentered`) as time-varying covariates predicting concurrent depression symptoms at each wave.
 
 ```{r}
 quadraticGCM_syntax <- '
@@ -162,21 +204,21 @@ quadraticGCM_syntax <- '
   quadratic =~ 0*depression_1 + 1*depression_2 + 4*depression_3 + 9*depression_4
 
   # Regression paths
-  intercept ~ sexMale
-  linear ~ sexMale
-  quadratic ~ sexMale
+  intercept ~ sexEffectCode + sleep_personMean + sexEffectCodeXsleep_personMean
+  linear ~ sexEffectCode + sleep_personMean + sexEffectCodeXsleep_personMean
+  quadratic ~ sexEffectCode + sleep_personMean + sexEffectCodeXsleep_personMean
   
   # Time-varying covariates
-  depression_1 ~ sleep_1
-  depression_2 ~ sleep_2
-  depression_3 ~ sleep_3
-  depression_4 ~ sleep_4
+  depression_1 ~ sleep_personMeanCentered_1 + sexEffectCodeXsleep_personMeanCentered_1
+  depression_2 ~ sleep_personMeanCentered_2 + sexEffectCodeXsleep_personMeanCentered_2
+  depression_3 ~ sleep_personMeanCentered_3 + sexEffectCodeXsleep_personMeanCentered_3
+  depression_4 ~ sleep_personMeanCentered_4 + sexEffectCodeXsleep_personMeanCentered_4
   
   # Constrain observed intercepts to zero
-  depression_1 ~ 0
-  depression_2 ~ 0
-  depression_3 ~ 0
-  depression_4 ~ 0
+  depression_1 ~ 0*1
+  depression_2 ~ 0*1
+  depression_3 ~ 0*1
+  depression_4 ~ 0*1
   
   # Constrain residual variances to be equal (needed to address negative variance)
   depression_1 ~~ vardep*depression_1
@@ -199,8 +241,7 @@ quadraticGCM_fit <- lavaan::sem(
   data = mydata_wide,
   missing = "ML",
   estimator = "MLR",
-  meanstructure = TRUE,
-  fixed.x = FALSE)
+  meanstructure = TRUE)
 ```
 
 ### Model Summary
@@ -234,6 +275,8 @@ lavaanPlot::lavaanPlot2(
   coef_labels = TRUE)
 ```
 
+To create an interactive path diagram, you can use the following syntax:
+
 ```{r}
 #| eval: false
 
@@ -244,7 +287,11 @@ lavaangui::plot_lavaan(quadraticGCM_fit)
 
 ### Model Syntax
 
-In estimating latent basis growth curves of depression symptoms, this model specifies latent intercept and slope factors, with factor loadings for the slope freely estimated at timepoints 2 and 3 to capture nonlinear patterns of change, `sex` as a time-invariant predictor of the latent intercept and slope, and `sleep` as a time-varying covariate predicting depression symptoms at each wave.
+In estimating latent basis growth curves of depression symptoms, this model specifies:
+
+1. latent intercept and slope factors, with factor loadings for the slope freely estimated at timepoints 2 and 3 to capture nonlinear patterns of change
+1. the person's sex (`sexEffectCode`) and the person's average sleep (`sleep_personMean`; and their interaction; `sexEffectCodeXsleep_personMean`) as time-invariant predictors of the latent intercept and slope, and
+1. a person's deviations from their average sleep (`sleep_personMeanCentered`; and in interaction with sex; `sexEffectCodeXsleep_personMeanCentered`) as time-varying covariates predicting concurrent depression symptoms at each wave.
 
 ```{r}
 latentBasisGCM_syntax <- '
@@ -253,20 +300,20 @@ latentBasisGCM_syntax <- '
   slope =~ 0*depression_1 + a*depression_2 + b*depression_3 + 1*depression_4 # freely estimate the loadings for t2 and t3
 
   # Regression paths
-  intercept ~ sexMale
-  slope ~ sexMale
+  intercept ~ sexEffectCode + sleep_personMean + sexEffectCodeXsleep_personMean
+  slope ~ sexEffectCode + sleep_personMean + sexEffectCodeXsleep_personMean
   
   # Time-varying covariates
-  depression_1 ~ sleep_1
-  depression_2 ~ sleep_2
-  depression_3 ~ sleep_3
-  depression_4 ~ sleep_4
+  depression_1 ~ sleep_personMeanCentered_1 + sexEffectCodeXsleep_personMeanCentered_1
+  depression_2 ~ sleep_personMeanCentered_2 + sexEffectCodeXsleep_personMeanCentered_2
+  depression_3 ~ sleep_personMeanCentered_3 + sexEffectCodeXsleep_personMeanCentered_3
+  depression_4 ~ sleep_personMeanCentered_4 + sexEffectCodeXsleep_personMeanCentered_4
   
   # Constrain observed intercepts to zero
-  depression_1 ~ 0
-  depression_2 ~ 0
-  depression_3 ~ 0
-  depression_4 ~ 0
+  depression_1 ~ 0*1
+  depression_2 ~ 0*1
+  depression_3 ~ 0*1
+  depression_4 ~ 0*1
   
   # Estimate mean of intercept and slope
   intercept ~ 1
@@ -282,8 +329,20 @@ latentBasisGCM_fit <- lavaan::sem(
   data = mydata_wide,
   missing = "ML",
   estimator = "MLR",
+  meanstructure = TRUE)
+```
+
+A model with negative variances is uninterpretable.
+We can constrain the variances to be nonnegative.
+
+```{r}
+latentBasisGCMmodified_fit <- lavaan::sem(
+  latentBasisGCMmodified_syntax,
+  data = mydata_wide,
+  missing = "ML",
+  estimator = "MLR",
   meanstructure = TRUE,
-  fixed.x = FALSE)
+  bounds = "pos.var")
 ```
 
 ### Model Summary
@@ -317,6 +376,8 @@ lavaanPlot::lavaanPlot(
   #covs = TRUE,
   stand = TRUE)
 ```
+
+To create an interactive path diagram, you can use the following syntax:
 
 ```{r}
 #| eval: false
@@ -428,6 +489,8 @@ lavaanPlot::lavaanPlot2(
   coef_labels = TRUE)
 ```
 
+To create an interactive path diagram, you can use the following syntax:
+
 ```{r}
 #| eval: false
 
@@ -453,7 +516,7 @@ To plot model-implied trajectories, see this resource:
 
 ## Model Syntax
 
-This cross-lagged panel model examines whether depression predicts later anxiety (i.e., cross-lagged paths), controlling for prior levels of anxiety (i.e., autoregressive effects), and simultaneously examining the reverse.
+This cross-lagged panel model examines whether anxiety predicts later depression (i.e., cross-lagged paths), controlling for prior levels of depression (i.e., autoregressive effects), and simultaneously examines the reverse association (i.e., depression predicting later anxiety, controlling for prior levels of anxiety).
 Concurrent covariances between depression and anxiety at each timepoint account for shared variance at the same occasion.
 
 ```{r}
@@ -528,6 +591,8 @@ lavaanPlot::lavaanPlot(
   stand = TRUE)
 ```
 
+To create an interactive path diagram, you can use the following syntax:
+
 ```{r}
 #| eval: false
 
@@ -544,7 +609,7 @@ Adapted from:
 
 ## Model Syntax
 
-This random-intercepts cross-lagged panel model examines whether depression predicts later anxiety (i.e., cross-lagged paths), controlling for prior levels of anxiety (i.e., autoregressive effects) and controlling for a person's general latent level of anxiety, and simultaneously examining the reverse.
+This random-intercepts cross-lagged panel model examines whether anxiety predicts later depression (i.e., cross-lagged paths), controlling for prior levels of depression (i.e., autoregressive effects) and controlling for a person's general latent level of depression, and simultaneously and simultaneously examines the reverse association (i.e., depression predicting later anxiety, controlling for prior levels of anxiety and general latent levels of anxiety).
 Concurrent covariances between depression and anxiety at each timepoint account for shared variance at the same occasion.
 
 ```{r}
@@ -698,6 +763,8 @@ lavaanPlot::lavaanPlot(
   stand = TRUE)
 ```
 
+To create an interactive path diagram, you can use the following syntax:
+
 ```{r}
 #| eval: false
 
@@ -709,15 +776,15 @@ lavaangui::plot_lavaan(riclpm_fit)
 ## Model Syntax
 
 This multilevel structural equation model disaggregates within- and between-person effects to examine associations with depression.
-At the within-person level, deviations in sleep, anxiety, and SES from a person's usual levels predict concurrent deviations in depression.
-At the between-person level, person-level averages across time of sleep, anxiety, and SES, along with sex, predict overall differences in depression across individuals.
+At the within-person level, we examine deviations in sleep, anxiety, and SES from a person's usual (average) levels in predicting concurrent deviations in depression, allowing the within-person association between sleep and depression to differ between boys and girls.
+At the between-person level, we examine person-level averages across time of sleep, anxiety, and SES, along with sex, in predicting overall differences in depression across individuals, allowing the between-person association between sleep and depression to differ between boys and girls.
 
 ```{r}
 multilevelSEM_syntax <- '
     level: 1
-        depression ~ sleep_personMeanCentered + anxiety_personMeanCentered + ses_personMeanCentered
+        depression ~ sleep_personMeanCentered + anxiety_personMeanCentered + ses_personMeanCentered + sexEffectCodeXsleep_personMeanCentered
     level: 2
-        depression ~ sleep_personMean + anxiety_personMean + ses_personMean + sexMale
+        depression ~ sleep_personMean + anxiety_personMean + ses_personMean + sexEffectCode + sexEffectCodeXsleep_personMean
 '
 ```
 
@@ -728,9 +795,8 @@ multilevelSEM_fit <- lavaan::sem(
   multilevelSEM_syntax,
   data = mydata_long,
   cluster = "ID",
-  #missing = "ML", # commenting out due to error
-  estimator = "MLR",
-  fixed.x = FALSE)
+  missing = "ML", # commenting out due to error
+  estimator = "MLR")
 ```
 
 ## Model Summary
@@ -761,6 +827,8 @@ lavaanPlot::lavaanPlot(
   stand = TRUE)
 ```
 
+To create an interactive path diagram, you can use the following syntax:
+
 ```{r}
 #| eval: false
 
@@ -774,12 +842,17 @@ We will follow the approach suggested by Widaman et al. (2010).
 Widaman, K. F., Ferrer, E., & Conger, R. D. (2010). Factorial invariance within longitudinal structural equation models: Measuring the same construct across time. *Child Development Perspectives*, *4*(1), 10–18. <https://doi.org/10.1111/j.1750-8606.2009.00110.x>
 
 For the longitudinal measurement invariance models, we will use simulated data from <https://mycourses.aalto.fi/mod/assign/view.php?id=1203047> (archived at <https://perma.cc/QTL2-ZHX2>).
+These data were simulated and adapted from data from Bliese and Ployhart (2002):
+
+Bliese, P. D., & Ployhart, R. E. (2002). Growth modeling using random coefficient models: Model building, testing, and illustrations. *Organizational Research Methods*, *5*(4), 362–387. <https://doi.org/10.1177/109442802237116>
+
 As noted [here](https://mycourses.aalto.fi/mod/assign/view.php?id=1203047) (archived at <https://perma.cc/QTL2-ZHX2>), "The data are in wide format where the variables are coded as [VARIABLE NAME][time index][indicator index]."
+The data include three indicators for each of three constructs: 1) job satisfaction (`JOBSAT`), 2) organizational commitment (`COMMIT`), and 3) readiness to perform (`READY`).
 
 Questions:
 
-1. Which level of longitudinal measurement invariance holds for the `Bliese-Ployhard-2000-indicators-1.csv` dataset (saved in object `longitudinalMI1`)?
-1. Repeat the tests of longitudinal measurement invariance for the remaining datasets: `Bliese-Ployhard-2000-indicators-2.csv`, `Bliese-Ployhard-2000-indicators-3.csv`, and `Bliese-Ployhard-2000-indicators-4.csv`.
+1. Which level of longitudinal measurement invariance holds for the `Bliese-Ployhart-2002-indicators-1.csv` dataset (saved in object `longitudinalMI1`)?
+1. Repeat the tests of longitudinal measurement invariance for the remaining datasets: `Bliese-Ployhart-2000-indicators-2.csv`, `Bliese-Ployhart-2000-indicators-3.csv`, and `Bliese-Ployhart-2000-indicators-4.csv`.
 Which level of longitudinal measurement invariance holds for each dataset?
 
 The answers to these questions are [here](answers.qmd).
@@ -950,6 +1023,8 @@ lavaanPlot::lavaanPlot2(
   stand = TRUE,
   coef_labels = TRUE)
 ```
+
+To create an interactive path diagram, you can use the following syntax:
 
 ```{r}
 #| eval: false
@@ -1159,6 +1234,8 @@ lavaanPlot::lavaanPlot2(
   stand = TRUE,
   coef_labels = TRUE)
 ```
+
+To create an interactive path diagram, you can use the following syntax:
 
 ```{r}
 #| eval: false
@@ -1380,6 +1457,8 @@ lavaanPlot::lavaanPlot2(
   coef_labels = TRUE)
 ```
 
+To create an interactive path diagram, you can use the following syntax:
+
 ```{r}
 #| eval: false
 
@@ -1595,6 +1674,8 @@ lavaanPlot::lavaanPlot2(
   stand = TRUE,
   coef_labels = TRUE)
 ```
+
+To create an interactive path diagram, you can use the following syntax:
 
 ```{r}
 #| eval: false
@@ -1812,6 +1893,8 @@ lavaanPlot::lavaanPlot2(
   stand = TRUE,
   coef_labels = TRUE)
 ```
+
+To create an interactive path diagram, you can use the following syntax:
 
 ```{r}
 #| eval: false
